--- a/index.html
+++ b/index.html
@@ -153,6 +153,23 @@
             <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
           </div>
          </section>
+         <!-- Super Client Section -->
+
+      <section class="mt-24 rounded-xl flex flex-col lg:flex-row gap-12 bg-gradient-to-r from-[#ff8938] to-[#f00] px-16 py-24">
+        <div class="space-y-5">
+          <h2 class="text-5xl font-extrabold text-white">Meet Our <br>Super Clients</h2>
+          <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, </p>
+          <button class="btn btn-primary">Show All</button>
+         </div>
+         <!-- Review Section -->
+         <div class="bg-white rounded-lg p-10 relative" >
+          <img class="absolute -top-5 -left-5" src="images/client.png" alt="">
+          <p >We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+          <h4 class="font-bold mt-5">Ilham Yuda</h4>
+           
+          <p class="font-medium">Businessman</p>
+         </div>
+      </section>
     </main>
 
     <footer>
