--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
               </div>
              <div>
                 <img
-                src="/images/banner.png"
-                class="" />
+                src="/images/banner.png"/>
                 <!-- ratings batch -->
                 <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white rounded-xl p-5 w-60">
                     <i class="fa-solid fa-star text-3xl text-amber-400 "></i>
@@ -83,7 +82,7 @@
                     <figure>
                       <img
                         src="/images/tea-1.png"
-                        alt="Shoes" />
+                        alt="" />
                     </figure>
                     <div class="card-body text-center">
                       <h2 class="text-2xl font-bold">Milk Tea</h2>
@@ -96,7 +95,7 @@
                     <figure>
                       <img
                         src="/images/tea-2.png"
-                        alt="Shoes" />
+                        alt="" />
                     </figure>
                     <div class="card-body text-center">
                       <h2 class="text-2xl font-bold">Black Tea</h2>
@@ -109,7 +108,7 @@
                     <figure>
                       <img
                         src="/images/tea-3.png"
-                        alt="Shoes" />
+                        alt="" />
                     </figure>
                     <div class="card-body text-center">
                       <h2 class="text-2xl font-bold">Lemon Tea</h2>
@@ -122,7 +121,7 @@
                     <figure>
                       <img
                         src="/images/tea-4.png"
-                        alt="Shoes" />
+                        alt="" />
                     </figure>
                     <div class="card-body text-center">
                       <h2 class="text-2xl font-bold">Green Tea</h2>
@@ -228,7 +227,7 @@
           <figure>
             <img
               src="/images/news-1.png"
-              alt="Shoes" />
+              alt="" />
           </figure>
           <div class="card-body space-y-2 mt-4">
             <p>Feb 05, 2027</p>
@@ -243,7 +242,7 @@
           <figure>
             <img
               src="/images/news-2.png"
-              alt="Shoes" />
+              alt="" />
           </figure>
           <div class="card-body space-y-2 mt-4">
             <p>Feb 05, 2027</p>
@@ -258,7 +257,7 @@
           <figure>
             <img class=""
               src="/images/news-3.png"
-              alt="Shoes" />
+              alt="" />
           </figure>
           <div class="card-body space-y-2 mt-4">
             <p>Feb 05, 2027</p>
